--- a/clase-2019-09-16/src/main/resources/application.properties
+++ b/clase-2019-09-16/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.output.ansi.enabled=always
+
+logging.level.com.iait=DEBUG
+logging.file=target/app.log
+
+#app.saludo.msj=Hola %s
+
+app.potencia.exponente=2
+app.potencia.bias=2
