Agrega propiedad de aplicación para tipo de tasa nominal

--- a/conversor-tasas/src/main/resources/application.properties
+++ b/conversor-tasas/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.output.ansi.enabled=always
 
 logging.level.com.iait=debug
 logging.file=target/app.log
+
+# opciones: adelantada, vencida
+app.tasa.nominal.tipo=adelantada
