Completa ejercicio de acceso a base de datos

--- a/acceso-base-datos/pom.xml
+++ b/acceso-base-datos/pom.xml
@@ -24,9 +24,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>1.4.199</version>
+           <groupId>com.microsoft.sqlserver</groupId>
+           <artifactId>mssql-jdbc</artifactId>
+           <version>6.1.0.jre8</version>
         </dependency>
 
         <dependency>
