Termina ejercicio con JdbcTemplate

--- a/ejercicio/src/main/resources/jdbc.properties
+++ b/ejercicio/src/main/resources/jdbc.properties
@@ -1,4 +1,3 @@
-app.url=jdbc:sqlserver://sqlserver\\sql2012;databaseName=SAD_MAIN_DEV
-app.user=eivfinanciero2
-app.pwd=rv760
-app.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+app.url=jdbc:h2:mem:testdb;AUTO_RECONNECT=true;DB_CLOSE_DELAY=-1
+app.user=sa
+app.pwd=
