--- a/concurrency/pom.xml
+++ b/concurrency/pom.xml
@@ -37,6 +37,11 @@
         
         <!-- JDBC -->
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>mssql-jdbc</artifactId>
         </dependency>
