--- a/concurrency/pom.xml
+++ b/concurrency/pom.xml
@@ -18,6 +18,9 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <version.swagger>2.9.2</version.swagger>
+        <validation-api.version>2.0.1.Final</validation-api.version>
+        <spring-boot.version>2.1.1.RELEASE</spring-boot.version>
+        <mssql-jdbc.version>6.2.1.jre8</mssql-jdbc.version>
         <liquibase.properties>liquibase-generate.properties</liquibase.properties>
     </properties>
     
@@ -39,19 +42,13 @@
         <!-- Liquibase -->
         <dependency>
             <groupId>org.liquibase</groupId>
-            <artifactId>liquibase-maven-plugin</artifactId>
-            <version>3.8.0</version>
-            <type>maven-plugin</type>
+            <artifactId>liquibase-core</artifactId>
         </dependency>
-<!--         <dependency> -->
-<!--             <groupId>org.liquibase.ext</groupId> -->
-<!--             <artifactId>liquibase-hibernate4</artifactId> -->
-<!--             <version>${liquibase-hibernate.version}</version> -->
-<!--         </dependency> -->
-<!--         <dependency> -->
-<!--             <groupId>org.liquibase</groupId> -->
-<!--             <artifactId>liquibase-core</artifactId> -->
-<!--         </dependency> -->
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-maven-plugin</artifactId>
+            <version>3.5.5</version>
+        </dependency>
         
         <!-- JDBC -->
         <dependency>
@@ -133,6 +130,15 @@
                 <activeByDefault>false</activeByDefault>
             </activation>
         </profile>
+        <profile>
+            <id>diff-entities</id>
+            <properties>
+                <liquibase.properties>liquibase-diff-entities.properties</liquibase.properties>
+            </properties>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+        </profile>
     </profiles>
     
     <build>
@@ -145,11 +151,28 @@
             <plugin>
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-maven-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.5.5</version>
                 <configuration>
                     <propertyFile>src/main/resources/${liquibase.properties}</propertyFile>
                     <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
-                </configuration>
+                </configuration> 
+                <dependencies>
+                    <dependency>
+                        <groupId>org.liquibase.ext</groupId>
+                        <artifactId>liquibase-hibernate5</artifactId>
+                        <version>3.6</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-data-jpa</artifactId>
+                        <version>${spring-boot.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>javax.validation</groupId>
+                        <artifactId>validation-api</artifactId>
+                        <version>${validation-api.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             
             <plugin>
