--- a/concurrency/src/main/resources/liquibase-diff-entities.properties
+++ b/concurrency/src/main/resources/liquibase-diff-entities.properties
@@ -3,3 +3,5 @@ driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 url=jdbc:sqlserver://sqlserver\\sql2012;databaseName=TEST
 username=eivfinanciero2
 password=rv760
+referenceUrl=hibernate:spring:com.iait.concurrency?dialect=org.hibernate.dialect.SQLServer2012Dialect
+diffChangeLogFile=src/main/resources/diffChangeLog.xml
