--- a/scheduler/src/main/resources/liquibase.properties
+++ b/scheduler/src/main/resources/liquibase.properties
@@ -1,6 +1,6 @@
+changeLogFile=src/main/resources/changeLog.xml
+outputChangeLogFile=src/main/resources/changeLog.xml
 driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
-classpath=/liquibase-3.8.0-bin/lib/mssql-jdbc-6.4.0.jre8.jar
-url=jdbc:sqlserver://sqlserver\\sql2012;databaseName=TEST2
+url=jdbc:sqlserver://EQ089\\sqlexpress;databaseName=TEST;integratedSecurity=true
 username=eivfinanciero2
 password=rv760
-changeLogFile=/src/main/resources/diffChangeLog.xml
